[package]
name = "tinyportmapper"
version = "0.2.2"
edition = "2021"
authors = ["tinyPortMapper Contributors"]
description = "A lightweight, high-performance port mapping/forwarding utility"

[build-dependencies]
chrono = "0.4"

[dependencies]
mio = { version = "1.0", features = ["os-ext", "net"] }
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
crossbeam = "0.8"
once_cell = "1.19"
linked-hash-map = "0.5"
signal-hook = "0.3"
atty = { version = "0.2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
strip-ansi-escapes = { version = "0.2", default-features = false }
winapi = { version = "0.3", features = ["winsock2", "ws2tcpip"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2tcpip"] }

[target.'cfg(unix)'.dependencies]
atty = "0.2"

[features]
default = []
# MY_DEBUG 调试模式（与 C++ 版本保持一致）
# 启用后会使用简化日志输出，不包含文件/函数/行号信息
my_debug = []

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

# 针对 musl 静态链接的配置
[profile.release-musl]
inherits = "release"
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
